updated gradient header

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="intro-text">
     <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
-    <p class="wow fadeInDown">Design Gráfico | Web Design | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
+    <p class="wow fadeInDown">Design Gráfico | UX/UI | Front End | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
     <a href="http://www.robsondesigner.com/cv" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Meu Currículo</a> 
   </div> <!--a href="#works-section-->
 </header>
@@ -110,8 +110,8 @@
     <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-desktop"></i>
-        <h4><strong>Web design</strong></h4>
-        <p>Criação de e-mail marketing, banners para web, redes sociais, manutenção e desenvolvimento de sites.</p>
+        <h4><strong>Front End e UX/UI</strong></h4>
+        <p>Manutenção e desenvolvimento de sites, criação de layouts de apps com boas práticas de UI com foco em UX.</p>
       </div>
       <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-gears"></i>
         <h4><strong>Design Gráfico</strong></h4>
@@ -144,7 +144,7 @@
             <li><a href="#" data-filter="*" class="active">Todos</a></li>
             <li><a href="#" data-filter=".web">Design Gráfico</a></li>
             <li><a href="#" data-filter=".app">Identidade Visual</a></li>
-            <li><a href="#" data-filter=".branding">Web Design</a></li>
+            <li><a href="#" data-filter=".branding">Front End | UX/UI</a></li>
           </ol>
         </li>
       </ul>
@@ -254,10 +254,12 @@
       <p></p>
     </div>
     <div class="row">
-      <div class="col-md-6 wow fadeInLeft"> <img src="img/about.png" alt="Imagem com o Logotipo Robson Designer" class="img-responsive"> </div>
+      <div class="col-md-6 wow fadeInLeft"> 
+        <img src="img/about.png" alt="Imagem com o Logotipo Robson Designer" class="img-responsive">
+      </div>
       <div class="col-md-6 wow fadeInRight">
           <h4>Robson Vinicius de Oliveira</h4>
-          <p>Sou Designer formado em Design - Bacharelado e atuo há 5 anos na área, atualmente curso pós graduação em Aplicativos de Jogos Digitais pela UP e MBA Administração e Marketing e pela Uninter. Trabalho na criação de materiais impressos, edição de vídeos, desenvolvimento web e SEO. <br></p>
+          <p>Sou Designer formado em Design - Bacharelado e atuo há 7 anos na área, possuo pós graduação em Aplicativos de Jogos Digitais e MBA Administração e Marketing. Trabalho na criação de materiais impressos, edição de vídeos, desenvolvimento web e SEO. <br></p>
           <div class="space"></div>
           <h4>Competências:</h4>
          <!--tinha um texto aqui -->
@@ -267,12 +269,12 @@
                 <ul>
                   <li><strong>Illustrator</strong></li>
                   <li>Photoshop</li>
-                  <li>Indesign</li>
-                  <li>Dreamweaver</li>
+                  <li>Indesign</li>                  
                   <li>HTML &amp; CSS</li>
                   <li>Javascript</li>
                   <li>Bootstrap</li>
                   <li>Design Responsivo</li>
+                  <li>UX/UI</li>
                   <li>Wordpress</li>
                 </ul>
               </div>
