CSS clip-path maker

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1347,6 +1347,21 @@
       </li>
 
       <li>
+        <a href="http://bennettfeely.com/clippy/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://bennettfeely.com/clippy/" target="_blank">CSS clip-path maker</a>
+          </h2>
+          <p>Gerador de formas em CSS</p>
+        </div>
+        <a class="resource-button" href="http://bennettfeely.com/clippy/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://devpen.io/editor" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
