--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
     <p class="wow fadeInDown">Design Gráfico | UX/UI | Front End | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
-    <a href="http://www.robsondesigner.com/cv" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Meu Currículo</a> 
+    <a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> 
   </div> <!--a href="#works-section-->
 </header>
 
