--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
     <p class="wow fadeInDown">Design Gráfico | UX/UI | Front End | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
-    <a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> 
+    <li class="btn-portfolio"><a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> </li>
   </div> <!--a href="#works-section-->
 </header>
 
@@ -141,10 +141,10 @@
       <ul class="cat">
         <li>
           <ol class="type">
-            <li><a href="#" data-filter="*" class="active">Todos</a></li>
-            <li><a href="#" data-filter=".web">Design Gráfico</a></li>
-            <li><a href="#" data-filter=".app">Identidade Visual</a></li>
-            <li><a href="#" data-filter=".branding">Front End | UX/UI</a></li>
+            <li class="btn-portfolio"><a href="#" data-filter="*" class="active">Todos</a></li>
+            <li class="btn-portfolio"><a href="#" data-filter=".web">Design Gráfico</a></li>
+            <li class="btn-portfolio"><a href="#" data-filter=".app">Identidade Visual</a></li>
+            <li class="btn-portfolio"><a href="#" data-filter=".branding">Front End | UX/UI</a></li>
           </ol>
         </li>
       </ul>
