--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2126,6 +2126,23 @@
         <a class="resource-button" href="https://bootsnipp.com/tags/sidebar" target="_blank">Veja</a>   
         <div id="estudo"></div>  
       </li>
+
+      <li>
+        <a href="https://developers.google.com/web/tools/chrome-devtools/remote-debugging/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3" target="_blank">
+          <div class="resource-icon">
+            <img src="https://developers.google.com/web/images/web-fundamentals-icon192x192.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developers.google.com/web/tools/chrome-devtools/remote-debugging/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3" target="_blank">
+              Primeiros passos com a depuração remota de dispositivos Android</a>
+          </h2>
+          <p>Developers Google</p>
+        </div>
+        <a class="resource-button" href="https://developers.google.com/web/tools/chrome-devtools/remote-debugging/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3" target="_blank">Veja</a>   
+        <div id="estudo"></div>  
+      </li>
         
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>
