updated thumbnail 1st web designer

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2100,7 +2100,7 @@
       <li>
         <a href="https://1stwebdesigner.com/psd-to-html/#psd-to-html" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/16265189_10154128639166837_4261067724060668383_n.png?_nc_cat=105&oh=ddd9f09fa2b3010347d95e82af6638c1&oe=5C2226C4" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-9/16265189_10154128639166837_4261067724060668383_n.png?_nc_cat=105&_nc_ht=scontent.fcwb2-1.fna&oh=604c01cafd48984fccaef685d41510c5&oe=5C95B235" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -2130,7 +2130,7 @@
       <li>
         <a href="https://pt.stackoverflow.com/questions/215148/mudar-cor-da-imagem-com-css" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/12006269_10150553545389971_5448097255504457554_n.png?_nc_cat=109&oh=3f3b4f6bb294c58dbd84844cf1addd88&oe=5C1D3706" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
