Livro Eloquente JavaScript

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2154,8 +2154,7 @@
           </h2>
           <p>Bootsnipp</p>
         </div>
-        <a class="resource-button" href="https://bootsnipp.com/tags/sidebar" target="_blank">Veja</a>   
-        <div id="estudo"></div>  
+        <a class="resource-button" href="https://bootsnipp.com/tags/sidebar" target="_blank">Veja</a>           
       </li>
 
       <li>
@@ -2435,18 +2434,18 @@
       </li>
 
       <li>
-        <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
+        <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&oh=59ff0a9db8abdd5e8538bdfd7a7a7bbc&oe=5C5A75F6" alt="#" />
+            <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">Web Designer x Desenvolvedor Web – Entenda a diferença!</a>
+            <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">Eloquent Javascript</a>
           </h2>
-          <p>BeCode | outras definições <a href="https://css-tricks.com/forums/topic/web-developer-vs-front-end-developer/" target="_blank"><mark>CSS Tricks</mark></a></p>
+          <p>Livro Traduzido JavaScript Elequente - 2° edição</p>
         </div>
-        <a class="resource-button" href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">Veja</a>   
+        <a class="resource-button" href="https://github.com/braziljs/eloquente-javascript" target="_blank">Veja</a>   
         <div id="certificacao"></div>
       </li>
 
