book Eloquent Javascript

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2436,7 +2436,7 @@
       <li>
         <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">
           <div class="resource-icon">
-            <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png" alt="#" />
+            <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png'" alt="#" />
           </div>
         </a>
         <div class="resource-details">
