--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1312,9 +1312,24 @@
           <h2>
             <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Road Map Web Developer</a>
           </h2>
-          <p>Web developer in 2018 | <a href="https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d" target="_blank"><mark>Artigo Medium</mark></a></p>
+          <p>Web developer in 2019 | <a href="https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d" target="_blank"><mark>Artigo Medium</mark></a></p>
         </div>
         <a class="resource-button" href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Veja</a>
+      </li>
+    
+      <li>
+        <a href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">React Developer Roadmap</a>
+          </h2>
+          <p>Guia do desenvolvedor React em 2019</p>
+        </div>
+        <a class="resource-button" href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">Veja</a>
       </li>
 
       <li>
