atualização do link da imagem do Nucleo app

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -949,7 +949,7 @@
       <li>
         <a href="https://nucleoapp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=0&oh=ee1b929a41a8f7ea70ff2bebe0e55f03&oe=5BFC99BB" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_ht=scontent.fcwb2-2.fna&oh=bf87a6c2b3f4b75a64fb4b7928c63e52&oe=5D134710" alt="#" />
           </div>
         </a>
         <div class="resource-details">
