--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -962,6 +962,22 @@
         <div id="documentacao"></div>
       </li>  
 
+      <li>
+        <a href="https://iconscout.com/unicons?fbclid=IwAR3i1RBkOApSJsmHCImnn6grSQjshrqwSuwUUMrSs6s1fnC0v_feJMAR_-A" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://iconscout.com/unicons?fbclid=IwAR3i1RBkOApSJsmHCImnn6grSQjshrqwSuwUUMrSs6s1fnC0v_feJMAR_-A" target="_blank">Unicons</a>
+          </h2>
+          <p>1000+ Pixel-perfect vector icons and Iconfont for your next project.</p>
+        </div>
+        <a class="resource-button" href="https://iconscout.com/unicons?fbclid=IwAR3i1RBkOApSJsmHCImnn6grSQjshrqwSuwUUMrSs6s1fnC0v_feJMAR_-A" target="_blank">Veja</a>
+        <div id="documentacao"></div>
+      </li>  
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Documentações</h2>
       <div class="linha"></div>
