atualização da imagem do Magic Mockups

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1327,7 +1327,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://magicmockups.com/" target="_blank">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/1460232_391903500958822_1980225346117260656_n.jpg?_nc_cat=0&oh=293fd2b584ebfd761f1f091e46151819&oe=5C3B600D" alt="Retro Vectors" />
+						<img src="../../base/images/magicMockups.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
