atualização da imagem do placeit

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1341,7 +1341,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://placeit.net/" target="_blank">
-						<img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/82e7796b9c15afe0f2243e3e870df09b/5C384092/t51.2885-19/s150x150/26865006_1971029873114725_810363597501759488_n.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/placeit.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
