atualizacao imagem indie Hackers

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -316,7 +316,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&oh=2b4fcf32b509a5aa48fb3f6030dad9db&oe=5C5DFFBE" alt="#" />
+            <img src="https://instagram.fcwb2-2.fna.fbcdn.net/vp/2f6f7bc93650e0fbcb33259307300ff7/5D2C364F/t51.2885-19/s150x150/47690696_331528810908088_6365877509677907968_n.jpg?_nc_ht=instagram.fcwb2-2.fna.fbcdn.net" alt="#" />
           </div>
         </a>
         <div class="resource-details">
