CSS effects Snippets

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -310,7 +310,6 @@
           <p>CSS Grid</p>
         </div>
         <a class="resource-button" href="https://gist.github.com/bartholomej/8415655" target="_blank">Veja</a>
-        <div id="css"></div>
       </li> 
 
       <li>
@@ -326,6 +325,21 @@
           <p>Products by Indie Hackers</p>
         </div>
         <a class="resource-button" href="https://www.indiehackers.com/products" target="_blank">Veja</a>
+      </li> 
+
+      <li>
+        <a href="https://emilkowalski.github.io/css-effects-snippets/?fbclid=IwAR3nKQxwHeJ4vYehmLkqo4Ra0Lx8F8dCJSqQJQxoPPHc_bdep41F1DSXEDY" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://emilkowalski.github.io/css-effects-snippets/?fbclid=IwAR3nKQxwHeJ4vYehmLkqo4Ra0Lx8F8dCJSqQJQxoPPHc_bdep41F1DSXEDY" target="_blank">CSS effects Snippets</a>
+          </h2>
+          <p>Botões com animação prontos para uso</p>
+        </div>
+        <a class="resource-button" href="https://emilkowalski.github.io/css-effects-snippets/?fbclid=IwAR3nKQxwHeJ4vYehmLkqo4Ra0Lx8F8dCJSqQJQxoPPHc_bdep41F1DSXEDY" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
