atualizacao logo Design Culture

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1228,7 +1228,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.designculture.com.br/10-boxes-planificadas-em-eps-totalmente-gratis-1" target="_blank">
-						<img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/72a8da236bbfcba49bc12c7a8d0f9320/5C275E63/t51.2885-19/s150x150/23596376_292276644615331_2607547105794850816_n.jpg" alt="Retro Vectors" />
+						<img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/7e15a89515ca5c1ff8b5895a6a22e56b/5D45BFDE/t51.2885-19/s320x320/42643955_471879746640274_4168137019123302400_n.jpg?_nc_ht=instagram.fcwb1-1.fna.fbcdn.net" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
