atualizacao de imagens

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1707,7 +1707,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=0&oh=f3901a8ec8f8855e65cccd8fbd7d1cd3&oe=5C333E65" alt="Retro Vectors" />
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&_nc_ht=scontent.fcwb1-1.fna&oh=9131966fed499519a20a7b277e918648&oe=5D481965" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1814,7 +1814,7 @@
 			<li>
 				<a href="https://cursos.timtec.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=83b379b65c920cdb38531770ae8a2b4e&oe=5C7A22CE" alt="Cursos" />
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=530635e0c5fa9a2066f7bd8d40dccbcc&oe=5D3FD7A1" alt="Cursos" />
 					</div>
 				</a>
 				<div class="resource-details">
@@ -1827,7 +1827,7 @@
 			<li>
 				<a href="https://www.cursoemvideo.com" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/10801772_791822567553733_6114747510190883788_n.png?_nc_cat=111&_nc_ht=scontent.fcwb2-2.fna&oh=d9bcf2b8bd789716fce72de246bda5d1&oe=5C7CCC2A" alt="Cursos" />					
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/10801772_791822567553733_6114747510190883788_n.png?_nc_cat=111&_nc_ht=scontent.fcwb1-1.fna&oh=b522da327d19636ec003f7e9d53a6958&oe=5D3A5045" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
@@ -1840,7 +1840,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alison.com/courses" target="_blank">
-						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/21743340_1691981360836553_8867221493187452381_n.png?_nc_cat=0&oh=8764aaa00f70904fa248e59c29b8ec1c&oe=5C1F3A5B" alt="Cursos" />
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=9cbc1296b5bcdbe99494ccedfba4d319&oe=5D0FF639" alt="Cursos" />
 					</a>
 				</div>
 				<div class="resource-details">
