atualizacao nome perfil twitter

--- a/cv/index.html
+++ b/cv/index.html
@@ -75,7 +75,7 @@
                 <i class="fas fa-graduation-cap"></i>
               </a>
 
-              <a href="https://twitter.com/designerobson" target="_blank" class="linkedin-icon social-icon">
+              <a href="https://twitter.com/robsonviniciusr" target="_blank" class="linkedin-icon social-icon">
                 <i class="fab fa-twitter"></i>
               </a>
 
@@ -83,11 +83,11 @@
                 <i class="fa fa-behance"></i>
               </a> -->
 
-              <a href="https://gitlab.com/RobsonVinicius" target="_blank" class="linkedin-icon social-icon">
+              <a href="https://gitlab.com/robsonvinicius" target="_blank" class="linkedin-icon social-icon">
                 <i class="fab fa-gitlab "></i>
               </a>
               
-              <a href="https://github.com/RobsonVinicius" target="_blank" class="linkedin-icon social-icon">
+              <a href="https://github.com/robsonvinicius" target="_blank" class="linkedin-icon social-icon">
                 <i class="fab fa-github"></i>
               </a>
                                 
