Cupom e section outras ofertas

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -376,7 +376,7 @@
           <li>
             <a href="https://email-pontofrio-training1.netlify.com/" target="_blank">
               <div class="resource-icon">
-                <img src="../../base/images/scriptTutorials.jpg" />              
+                <img src="../../base/images/portfolios.jpg" />              
               </div>
             </a>
             <div class="resource-details">
