--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -134,18 +134,18 @@
       </li>
 
       <li>
-        <a href="https://www.goodemailcopy.com/" target="_blank">
+        <a href="https://mjml.io/" target="_blank">
           <div class="resource-icon">
             <img src="https://avatars2.githubusercontent.com/u/16115896?s=200&v=4" alt="MJML framework" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.goodemailcopy.com/" target="_blank">MJML</a>
+            <a href="https://mjml.io/" target="_blank">MJML</a>
           </h2>
           <p>The only framework that makes responsive email easy</p>
         </div>
-        <a class="resource-button" href="https://www.goodemailcopy.com/" target="_blank">Veja</a>            
+        <a class="resource-button" href="https://mjml.io/" target="_blank">Veja</a>            
       </li>
 
       <div class="linha"></div>        
