link de e-mail marketing original do Ponto Frio

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -383,7 +383,7 @@
               <h2>
                 <a href="https://email-pontofrio-training1.netlify.com/" target="_blank">Ponto Frio Treino 1</a>
               </h2>
-              <p>Utilizando o framework MJML</p>              
+              <p>Utilizando o framework MJML - Original <mark><a href="http://m.promo.pontofrio.com.br/nl/jsp/m.jsp?c=%40lUD7PiyvQh4hhlGEfWiVOJ%2BaiaqBqxDjAdPol8j39lU%3D" target="_blank">aqui</a></mark></p>              
             </div>
             <a class="resource-button" href="https://email-pontofrio-training1.netlify.com/" target="_blank">Veja</a>
           </li>
