atualizacao de links das logos

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -46,7 +46,7 @@
       <li>
         <a href="https://www.implantandomarketing.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&oh=cf34775d293c302f74f542efae2a3cd3&oe=5C219651" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=6074141ec2fe7d8876d74a0f2367bec7&oe=5D73843E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -196,7 +196,7 @@
       <li>
         <a href="https://www.ecommercebrasil.com.br/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/17796306_1531704723506287_766375710109810577_n.png?_nc_cat=105&oh=1989541854d5e7ecd2ab36a927680582&oe=5C49E41F" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/17796306_1531704723506287_766375710109810577_n.png?_nc_cat=105&_nc_ht=scontent.fcwb1-1.fna&oh=410a02cac7be4ccbe2728bfa4bddff66&oe=5D37321F" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -211,7 +211,7 @@
       <li>
         <a href="https://www.publicitarioscriativos.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/1bcfdbb6eee79f9cb3e56803a60a5cc5/5BD8D477/t51.2885-19/s320x320/15057355_1832863176956243_2613393406688231424_a.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=8d81d4c3e7f6fe25fa73573763f403c5&oe=5D6CA1D5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -241,7 +241,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=0&oh=b8f4b84e37164c30d6a1134383c8156a&oe=5C198268" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=05f318f0789731de0bc4680537bba671&oe=5D38CFC3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -309,7 +309,7 @@
       <li>
         <a href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/23561593_1921177074564506_2198188356803910177_n.png?_nc_cat=0&oh=5051c85fa37b62db7ec59f28cf1a8284&oe=5C14E40E" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/49787266_2476772519004956_7464639180329451520_n.jpg?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=3a67f03b17998c8eff72ee8e93fc6a4e&oe=5D3DE845" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -324,7 +324,7 @@
       <li>
         <a href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&oh=8db6315dbceb8f8c25f679a3d58a375c&oe=5C4B81C3" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/49787266_2476772519004956_7464639180329451520_n.jpg?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=3a67f03b17998c8eff72ee8e93fc6a4e&oe=5D3DE845" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -339,7 +339,7 @@
       <li>
         <a href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12107129_10153622035399383_1373534565017675651_n.png?_nc_cat=110&oh=3d2a619f0237dfe1b723f253184fbc49&oe=5C4FCB65" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13015138_10154063645224383_1474127129629977999_n.png?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=b8b975f0eaabd769104ef5ce0898250d&oe=5D2BEA4E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -354,7 +354,7 @@
       <li>
         <a href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12391987_1055348234517664_8583901826881431271_n.png?_nc_cat=101&_nc_ht=scontent.fcwb1-1.fna&oh=eb4d566e126f439537151cae644c9689&oe=5C41F330" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13935078_702053786609082_7346245149366186700_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=128a493c8d771c2e929a85557f718674&oe=5D2F43A0" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -369,7 +369,7 @@
       <li>
         <a href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">
           <div class="resource-icon">
-            <img src="https://instagram.fcwb2-1.fna.fbcdn.net/vp/70fea2c8fe13ba86ac9555c50c4de1a9/5C8211F5/t51.2885-19/s320x320/43913196_616691392092740_6368589416453111808_n.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/28468521_1812606625709938_6044956846867882547_n.png?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=a32bea834efe1c31eda4ebee29951b3e&oe=5D364E0F" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -403,7 +403,7 @@
       <li>
         <a href="https://mailchimp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&oh=79e13898d8017f42bc981d0b6f024a30&oe=5C15B656" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=b7ddb16202a48593d4b13ac6f2f14c91&oe=5D2A9156" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -448,7 +448,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&oh=8db6315dbceb8f8c25f679a3d58a375c&oe=5C4B81C3" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=05f318f0789731de0bc4680537bba671&oe=5D38CFC3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -463,7 +463,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&oh=fd9269b05820883edf3e9ec54547dea0&oe=5C606A03" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=48fb29c343082e05c4267934c031cdda&oe=5D39C442" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -478,7 +478,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&oh=fd9269b05820883edf3e9ec54547dea0&oe=5C606A03" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=48fb29c343082e05c4267934c031cdda&oe=5D39C442" alt="#" />
           </div>
         </a>
         <div class="resource-details">
