ferramentas de checklist - wunderlist, todoist

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -431,6 +431,21 @@
       </li>
       
       <li>
+        <a href="https://www.wunderlist.com/pt/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=0b878fb4d95d2680142db872715af475&oe=5D2C587F" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.wunderlist.com/pt/" target="_blank">Wunderlist</a>
+          </h2>
+          <p>Ferramenta para Checklist. Outra alternativa é o <a href="https://todoist.com" target="_blank"><mark>Todoist</mark></a></p>
+        </div>
+        <a class="resource-button" href="https://www.wunderlist.com/pt/" target="_blank">Veja</a>
+      </li>
+      
+      <li>
         <a href="https://ffffidget.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
