db4free - banco de dados gratuito para testes

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -252,6 +252,21 @@
       </li> 
 
       <li>
+        <a href="https://www.db4free.net/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.db4free.net/" target="_blank">db4free</a>
+          </h2>
+          <p>Banco de dados gratuito para testes</p>
+        </div>
+        <a class="resource-button" href="https://www.db4free.net/" target="_blank">Veja</a>
+      </li> 
+
+      <li>
         <a href="https://www.netlify.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://avatars0.githubusercontent.com/u/7892489?s=200&v=4" alt="#" />
