novo link logo web design ledger

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1990,7 +1990,7 @@
       <li>
         <a href="https://webdesignledger.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p480x480/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&oh=a301496f1673aeec763583994ec1e940&oe=5C4BC782" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_ht=scontent.fcwb2-2.fna&oh=f23563d9666e658e6c405dfa44531630&oe=5D3505C5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
