atualização link logo code signal

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2005,7 +2005,7 @@
       <li>
         <a href="https://codesignal.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&oh=86858ea307982cc6d12c39d8d3d8c444&oe=5C53527E" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=b5fbc9517d5cbe9d5ba062a5488cc130&oe=5D682D7E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
