--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2020,7 +2020,7 @@
       <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&oh=f35d80f57b15c07ceaac3913d3c48430&oe=5C51E2F2" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=056e57222a01d94b05d5ca993ce246fa&oe=5D666629" alt="#" />
           </div>
         </a>
         <div class="resource-details">
