link adobe blog

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -253,7 +253,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://theblog.adobe.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/26814452_1588906554497375_5273049988508376744_n.png?_nc_cat=1&oh=397ab1388682224a8f5fbc1dc8bfd5f3&oe=5C1C5F43" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/26814452_1588906554497375_5273049988508376744_n.png?_nc_cat=105&_nc_ht=scontent.fcwb1-1.fna&oh=44b2c0725d67288b29d73ba1e061b9ee&oe=5D31F104" alt="#" />
           </a>
         </div>
         <div class="resource-details">
