atualizacao link logo CSS Author

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2050,7 +2050,7 @@
       <li>
         <a href="https://cssauthor.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&oh=67a21d91fd6451660e5ff4b255f96fea&oe=5C52D1F3" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=27b100929e30c6bba6b59d59a1bd546b&oe=5D67ACF3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
