--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2316,7 +2316,7 @@
       <li>
         <a href="http://www.codenation.com.br/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/38756566_513523525728253_8078984228538155008_n.png?_nc_cat=111&oh=4e196badc9872b6ed9eda7f00bd3cf1a&oe=5C4B6EF4" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/54417706_637404076673530_6620788057828229120_n.png?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=e4bf308fe82deef846d8d96823456231&oe=5D71C544" alt="#" />
           </div>
         </a>
         <div class="resource-details">
