--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2496,7 +2496,7 @@
       <li>
         <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&oh=59ff0a9db8abdd5e8538bdfd7a7a7bbc&oe=5C5A75F6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=e200858573fddb4d72925e31735d77b2&oe=5D5AFE5D" alt="#" />
           </div>
         </a>
         <div class="resource-details">
