atualização de link da logo do Indie Hackers

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -330,7 +330,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://instagram.fcwb2-2.fna.fbcdn.net/vp/2f6f7bc93650e0fbcb33259307300ff7/5D2C364F/t51.2885-19/s150x150/47690696_331528810908088_6365877509677907968_n.jpg?_nc_ht=instagram.fcwb2-2.fna.fbcdn.net" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=2a5746897f23e0a52f8607d3ab0003ba&oe=5D987615" alt="#" />
           </div>
         </a>
         <div class="resource-details">
