atualização link logo Apple Developer

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/c701a5dca3dfdf0ac7e3c3ede5cd1343/5C2D491C/t51.2885-19/s150x150/20635165_1942203892713915_5464937638928580608_a.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/13775446_1098966590195945_9090960569811094730_n.jpg?_nc_cat=1&_nc_oc=AQmbYEZimd__UGuCu4vLS3CRULyuKBCGq7ttBKzm5K4zGpm4bkjGi03ZCsHk8_XX0bE&_nc_ht=scontent.fcwb1-1.fna&oh=45a13d3659558764b9675af5e66612d9&oe=5D5DBED3" alt="#" />
           </a>
         </div>
         <div class="resource-details">
