--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   </div>
 </div>
 
-<!-- Testimonials Section --> 
+<!-- Posts Section --> 
 <div id="testimonials-section" class="text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
