--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1840,7 +1840,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alison.com/courses" target="_blank">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=9cbc1296b5bcdbe99494ccedfba4d319&oe=5D0FF639" alt="Cursos" />
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_oc=AQkX3wgrACT0PNOw0lmNWQt6uF-6RexIiqMXcTw4DwzP5bWSbR3GW2tDjThWoGmM-mg&_nc_ht=scontent.fcwb2-2.fna&oh=1d9a8c6fe1c51ed46b87f46f5bcecea1&oe=5DBF477E" alt="Cursos" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1853,7 +1853,7 @@
 			<li>
 				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_ht=scontent.fcwb2-2.fna&oh=82e0177b1010c59656eb27017b8061c5&oe=5CACA813" alt="Cursos" />					
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_oc=AQnUrgIzcKLNbljCHKXVbGeCF9zO9Gd65YEv5bEiWu7E3UVKOUqL9Qu_0elyzK-Hs-A&_nc_ht=scontent.fcwb2-2.fna&oh=2ba8c22a26cfdfd17d82881fac38539f&oe=5DC2D71E" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
